k8s/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: default
  labels:
    name: auth
spec:
  ports:
    - name: grpc
      port: 8080
      targetPort: grpc
  selector:
    name: auth
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: auth
  labels:
    name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      name: auth
  template:
    metadata:
      labels:
        name: auth
    spec:
      containers:
        - name: kite
          volumeMounts:
            - name: pubsub
              mountPath: "/pubsub"
              readOnly: true
            - name: jwt
              mountPath: "/jwt"
              readOnly: true
          image: eu.gcr.io/kite-prod-297314/auth:9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: grpc
      volumes:
        - name: pubsub
          secret:
            secretName: pubsub-service-account
        - name: jwt
          secret:
            secretName: kite-jwt
