k8s/followers.yaml
apiVersion: v1
kind: Service
metadata:
  name: followers
  namespace: default
  labels:
    name: followers
spec:
  ports:
    - name: grpc
      port: 8080
      targetPort: grpc
  selector:
    name: followers
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: followers
  labels:
    name: followers
spec:
  replicas: 1
  selector:
    matchLabels:
      name: followers
  template:
    metadata:
      labels:
        name: followers
    spec:
      containers:
        - name: kite
          image: eu.gcr.io/kite-prod-297314/followers:2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: grpc
