k8s/likes.yaml
apiVersion: v1
kind: Service
metadata:
  name: likes
  namespace: default
  labels:
    name: likes
spec:
  ports:
    - name: grpc
      port: 8080
      targetPort: grpc
  selector:
    name: likes
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: likes
  labels:
    name: likes
spec:
  replicas: 1
  selector:
    matchLabels:
      name: likes
  template:
    metadata:
      labels:
        name: likes
    spec:
      containers:
        - name: kite
          image: eu.gcr.io/kite-prod-297314/likes:18
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: grpc
