k8s/posts.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts
  namespace: default
  labels:
    name: posts
spec:
  ports:
    - name: grpc
      port: 8080
      targetPort: grpc
  selector:
    name: posts
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: posts
  labels:
    name: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      name: posts
  template:
    metadata:
      labels:
        name: posts
    spec:
      containers:
        - name: kite
          volumeMounts:
            - name: pubsub
              mountPath: "/pubsub"
              readOnly: true
          image: eu.gcr.io/kite-prod-297314/posts:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: grpc
      volumes:
        - name: pubsub
          secret:
            secretName: pubsub-service-account
