k8s/users.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: default
  labels:
    name: users
spec:
  ports:
  - name: grpc
    port: 8080
    targetPort: grpc
  selector:
    name: users
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: users
  labels:
    name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      name: users
  template:
    metadata:
      labels:
        name: users
    spec:
      containers:
      - name: kite
        volumeMounts:
        - name: pubsub
          mountPath: "/pubsub"
          readOnly: true
        image: eu.gcr.io/kite-prod-297314/users:14
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: grpc
      volumes:
      - name: pubsub
        secret:
          secretName: pubsub-service-account
